frontend: fixed issue with z-index

--- a/app-frontend/src/app/result/result.component.scss
+++ b/app-frontend/src/app/result/result.component.scss
@@ -38,9 +38,6 @@
         padding-top: 25px;
     }
 
-    .header-overlay {
-    
-    }
 
     .info-row {
 
